# rovac

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX_MOTOR_DEBUG_PROMPT.md  HANDOFF.md  README.md  rovac
3D-prints/: ESP-WROOM-32-devkit-v1-7_5mm-header.3mf  ESP-WROOM-32-devkit-v1-small-header.3mf
archive/legacy_hardware/esp32_lidar_wireless/main/: CMakeLists.txt  Kconfig.projbuild  debug_console.c  debug_console.h  led_status.c  lidar_motor.c  lidar_motor.h  lidar_reader.h  main.c  nvs_config.c  uros.h
arduino_lidar_bridge/: arduino_lidar_bridge.ino
bench_data/: step_20260422_034205_lin+0.150_baseline_kp25_ki120.csv  step_20260422_034805_lin+0.150_t8_postfix_015.csv  step_20260422_034809_lin+0.050_t9_postfix_005.csv  step_20260422_034813_lin+0.300_t10_postfix_030.csv  step_20260422_035230_ang+1.00_t16_stall0_ang10.csv  step_20260422_035235_ang+2.00_t16_stall0_ang20.csv  step_20260422_035240_lin+0.150_t16_stall0_lin15.csv  step_20260422_035345_lin+0.150_t17_ffs140_lin15.csv  step_20260422_035350_lin+0.300_t17_ffs140_lin30.csv  step_20260422_035355_ang+2.00_t17_ffs140_ang20.csv  (+11 more)
hardware/android_phone_sensors/app/src/main/cpp/: CMakeLists.txt  xrce_bridge.c
hardware/esp32_motor_wireless/main/: CMakeLists.txt  Kconfig.projbuild  bno055.c  bno055.h  debug_console.c  debug_console.h  encoder_reader.c  encoder_reader.h  led_status.c  led_status.h  main.c  motor_control.c  motor_control.h  motor_driver.c  motor_driver.h  motor_params.c  motor_params.h  nvs_config.c  nvs_config.h  odometry.c  odometry.h  oled_ssd1306.c  oled_ssd1306.h  oled_status.c  oled_status.h  pid_controller.c  pid_controller.h  serial_transport.c  serial_transport.h  uros.c  uros.h  wifi.c  wifi.h
hardware/phone_sensors/: README.md  launch_phone_sensors.sh  package.xml  phone_sensors_ros2_node.py
hardware/stereo_cameras/: README.md  README_PI.md  config_pi.json  debug_stereo.py  depth_calibration_interactive.py  depth_correction.py  frames_2026-01-21_07.32.46.gv  install_stereo_services.sh  launch_stereo.py  launch_stereo.sh  obstacle_detector.py  package.xml  ros2_stereo_depth_enhanced.py  ros2_stereo_depth_node.py  run_stereo_ros2.sh  stereo_calibration.py  stereo_depth_calibrated.py  stereo_depth_test.py  test_cameras_pi.py  test_mouse.py  test_ros2.sh
hardware/stereo_cameras/.claude/agents/: dashboard-web.md  opencv-vision.md  pi-deployment.md  robotics-reviewer.md  ros2-expert.md  test-writer.md
hardware/stereo_cameras/calibration_data/: depth_correction.json  stereo_calibration.json
hardware/stereo_cameras/calibration_ui/: calibration_server.py
hardware/stereo_cameras/dashboard/: remote_monitor.py  server.py
hardware/stereo_cameras/dashboard/templates/: dashboard.html
hardware/stereo_cameras/docs/: API_REFERENCE.md  ARCHITECTURE.md  CALIBRATION_GUIDE.md  DASHBOARD_GUIDE.md  INSTALLATION.md  TROUBLESHOOTING.md  VISUALIZATION_ENHANCEMENTS.md
hardware/stereo_cameras/systemd/: rovac-edge-stereo-obstacle.service  rovac-edge-stereo.target
hardware/stereo_cameras/tests/: run_tests.sh  test_all_features.py  test_stereo_integration.py
hardware/stereo_cameras/tools/: stereo_export.py  stereo_playback.py  stereo_record.py  stereo_visualizer.py
robot_mcp_server/: BEHAVIOR_TREE_README.md  DEEP_RL_NAVIGATION_README.md  DL_PATH_PLANNING_README.md  EDGE_OPTIMIZATION_README.md  ENHANCED_SYSTEM_PROGRESS.md  ENHANCED_SYSTEM_README.md  FLEET_MANAGEMENT_README.md  OBJECT_RECOGNITION_README.md  PHASE5_ADVANCED_NAVIGATION_SUMMARY.md  PREDICTIVE_ANALYTICS_README.md  PREDICTIVE_OBSTACLE_AVOIDANCE_README.md  THERMAL_IMAGING_README.md  WEB_DASHBOARD_README.md  adaptive_environmental_model.py  advanced_navigation.launch.py  advanced_navigation_node.py  behavior_tree.launch.py  behavior_tree_framework.py  behavior_tree_node.py  camera_snapshot_server.py  deep_rl_navigation.launch.py  deep_rl_navigation.py  deep_rl_navigation_node.py  diagnostics_collector.py  dl_path_planning.launch.py  dl_path_planning.py  dl_path_planning_node.py  edge_optimization.launch.py  edge_optimization_node.py  fleet_data_structures.py  fleet_management.launch.py  fleet_management_framework.py  frontier_exploration_node.py  heat_signature_detector.py  mcp_server.py  neural_path_planning.py  object_recognition.launch.py  object_recognition_design.md  object_recognition_node.py  obstacle_avoidance_node.py  (+23 more)
robot_mcp_server/phone_integration/: README.md  depth_estimation_node.py  lidar_camera_fusion_node.py  phone_camera_node.py  phone_camera_simple.py  phone_integration.launch.py  phone_sensors_node.py  start_phone_integration.sh  test_sensors.py
robot_mcp_server/static/css/: dashboard.css
robot_mcp_server/static/js/: dashboard.js  test-status.js  test-websocket.js
robot_mcp_server/templates/: dashboard.html  test-status.html  test-websocket.html
robot_mcp_server/tests/: test_websocket.html
robot_mcp_server/tests/e2e/: TEST_REPORT.md  conftest.py  test_accessibility.py  test_controls.py  test_dashboard.py  test_navigation.py  test_websocket.py
ros2_ws/src/rovac_motor_driver/: CMakeLists.txt  package.xml
ros2_ws/src/rovac_motor_driver/config/: motor_driver.yaml
ros2_ws/src/rovac_motor_driver/include/rovac_motor_driver/: motor_driver_node.hpp  serial_port.hpp
ros2_ws/src/rovac_motor_driver/src/: main.cpp  motor_driver_node.cpp  serial_port.cpp
ros2_ws/src/rovac_sensor_driver/: CMakeLists.txt  package.xml
ros2_ws/src/rovac_sensor_driver/config/: sensor_driver.yaml
ros2_ws/src/rovac_sensor_driver/include/rovac_sensor_driver/: sensor_driver_node.hpp  serial_port.hpp
ros2_ws/src/rovac_sensor_driver/src/: main.cpp  sensor_driver_node.cpp  serial_port.cpp
ros2_ws/src/tank_description/: package.xml  setup.py
ros2_ws/src/tank_description/config/: nav2_params.yaml  slam_params.yaml
ros2_ws/src/tank_description/launch/: command_center.launch.py  full_stack.launch.py  lidar.launch.py  locomotion.launch.py  nav_stack.launch.py  sensors.launch.py
ros2_ws/src/tank_description/tank_description/: cmd_vel_mux.py  cmd_vel_mux.py.backup  http_bridge.py  tank_motor_driver.py
ros2_ws/src/tank_description/urdf/: tank.urdf
(+488 files in other folders)
