idf_component_register(
    SRCS
        "main.c"
        "nvs_config.c"
        "wifi.c"
        "led_status.c"
        "debug_console.c"
        "motor_driver.c"
        "encoder_reader.c"
        "pid_controller.c"
        "odometry.c"
        "motor_control.c"
        "oled_ssd1306.c"
        "oled_status.c"
        "bno055.c"
        "uros.c"
    INCLUDE_DIRS "."
    REQUIRES
        driver
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        esp_timer
        vfs
        micro_ros_espidf_component
)
