idf_component_register(
    SRCS
        "main.c"
        "nvs_config.c"
        "led_status.c"
        "motor_driver.c"
        "encoder_reader.c"
        "pid_controller.c"
        "odometry.c"
        "motor_control.c"
        "oled_ssd1306.c"
        "oled_status.c"
        "bno055.c"
        "serial_transport.c"
        "../../../common/cobs.c"
    INCLUDE_DIRS "." "../../../common"
    REQUIRES
        driver
        nvs_flash
        esp_timer
        vfs
)
