<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rovac_sensor_driver</name>
  <version>1.0.0</version>
  <description>ROVAC sensor hub driver — USB serial binary protocol (COBS-framed) to ESP32 sensor hub (4x HC-SR04 ultrasonic + 2x Sharp IR cliff)</description>
  <maintainer email="mohammed@rovac.robot">Mohammed Nazmy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
