<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tank_description</name>
  <version>0.0.1</version>
  <description>Tank Description and Launch</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
