idf_component_register(
    SRCS
        "main.c"
        "uros.c"
        "wifi.c"
        "nvs_config.c"
        "led_status.c"
        "debug_console.c"
        "lidar_reader.c"
        "lidar_motor.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        driver
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        esp_timer
        vfs
        micro_ros_espidf_component
)
